ガイドスマホ版GSAPを改良

--- a/src/app/pages/offcial/guide/guide.component.html
+++ b/src/app/pages/offcial/guide/guide.component.html
@@ -1,4 +1,6 @@
 <div class="container">
+  <div id="load__mask"></div>
+
   <div class="section top">
     <img
       class="logo"
@@ -7,6 +9,7 @@
     />
     <div class="caption">次はどこへ行く?</div>
     <div class="scroll">
+      scroll
       <svg class="arrows">
         <path class="a1" d="M0 0 L30 32 L60 0"></path>
         <path class="a2" d="M0 20 L30 52 L60 20"></path>
@@ -28,22 +31,22 @@
     </div>
     <div class="screen">
       <img src="../../../../../assets/img/guide/body1.png" class="bg" alt="" />
-      <div class="mark cap1">
+      <div class="mark cap1" id="mark11">
         <div class="balloon">任意のキーワードで検索しよう！</div>
       </div>
-      <div class="mark cap2">
+      <div class="mark cap2" id="mark12">
         <div class="balloon">お気に入りの投稿を見つけてみよう</div>
       </div>
-      <div class="mark cap3">
+      <div class="mark cap3" id="mark13">
         <div class="balloon">おすすめにないスポットはGoogleで探してみよう</div>
       </div>
-      <div class="mark cap4">
+      <div class="mark cap4" id="mark14">
         <div class="balloon">このプランを詳しく見る</div>
       </div>
-      <div class="mark cap5">
+      <div class="mark cap5" id="mark15">
         <div class="balloon">気に入ったプランは、myプランに入れてみよう</div>
       </div>
-      <div class="mark cap6">
+      <div class="mark cap6" id="mark16">
         <div class="balloon">myプランはここから</div>
       </div>
     </div>
@@ -60,8 +63,17 @@
         移動手段や所用時間も、自宅からホテルまでスポットを最短で周るルートも自動計算してくれる
       </p>
     </div>
-    <div class="screen">
+    <div class="screen scr0">
+      <img src="../../../../../assets/img/guide/body21.png" class="bg" alt="" />
+    </div>
+    <div class="screen scr1">
       <img src="../../../../../assets/img/guide/body2.png" class="bg" alt="" />
+    </div>
+    <!-- <div class="screen scr2">
+      <img src="../../../../../assets/img/guide/body21.png" class="bg" alt="" />
+    </div> -->
+    <div class="screen scr3">
+      <img src="../../../../../assets/img/guide/body22.png" class="bg" alt="" />
     </div>
   </div>
 
