--- a/src/app/pages/offcial/guide/guide.component.scss
+++ b/src/app/pages/offcial/guide/guide.component.scss
@@ -6,7 +6,7 @@
     top: 0;
     left: 0;
     z-index: 9999;
-    height: 100%;
+    height: 100vh;
     width: 100%;
 
     &.reval {
@@ -81,7 +81,7 @@
   .section {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: calc(100vh + 100px);
     position: relative;
     padding: 1.5em;
     .head {
