ガイドview 調整

--- a/src/app/pages/offcial/guide/guide.component.html
+++ b/src/app/pages/offcial/guide/guide.component.html
@@ -105,8 +105,11 @@
         URLを知っている人にだけ共有したり、みんなに公開したり、みんなにも魅力的な休日プランを発信しよう!
       </p>
     </div>
-    <div class="screen">
+    <div class="screen scr1">
       <img src="../../../../../assets/img/guide/body41.png" class="bg" alt="" />
+    </div>
+    <div class="screen scr2">
+      <img src="../../../../../assets/img/guide/body42.png" class="bg" alt="" />
     </div>
   </div>
 </div>
