リンク共有ダイアログのPC表示サイズ修正

--- a/src/app/pages/offcial/guide/guide.component.html
+++ b/src/app/pages/offcial/guide/guide.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" id="cont">
   <div id="load__mask"></div>
 
   <div class="section top">
@@ -70,8 +70,8 @@
       <img src="../../../../../assets/img/guide/body2.png" class="bg" alt="" />
     </div>
     <!-- <div class="screen scr2">
-      <img src="../../../../../assets/img/guide/body21.png" class="bg" alt="" />
-    </div> -->
+        <img src="../../../../../assets/img/guide/body21.png" class="bg" alt="" />
+      </div> -->
     <div class="screen scr3">
       <img src="../../../../../assets/img/guide/body22.png" class="bg" alt="" />
     </div>
