--- a/src/app/parts/urlcopy-dialog/urlcopy-dialog.component.scss
+++ b/src/app/parts/urlcopy-dialog/urlcopy-dialog.component.scss
@@ -1,18 +1,29 @@
 @import "vars";
-::ng-deep.cdk-global-overlay-wrapper{
-  align-items: center!important;
+::ng-deep.cdk-global-overlay-wrapper {
+  align-items: center !important;
+  .cdk-overlay-pane {
+    @media screen and (min-width: 1025px) {
+      display: flex;
+      justify-content: center;
+    }
+  }
 }
 
 //::ng-deep.mat-dialog-container{
-::ng-deep{
-  #urlShare{
+::ng-deep {
+  #urlShare {
     border-radius: 10px;
-    padding: 30px 26px!important;
+    padding: 30px 26px !important;
     position: relative;
-    .mat-dialog-title{
+
+    @media screen and (min-width: 1025px) {
+      width: 50% !important;
+    }
+
+    .mat-dialog-title {
       font-size: 16px;
       display: inline-flex;
-      &::before{
+      &::before {
         content: url("../../../assets/img/icon_share.svg");
         width: 28px;
         height: 28px;
@@ -21,55 +32,55 @@
       }
       margin-bottom: 0;
     }
-    p{
+    p {
       margin-top: 0;
     }
-    .mat-dialog-content{
-      .url{
+    .mat-dialog-content {
+      .url {
         word-wrap: break-word;
         font-size: 14px;
         padding: 3px;
         border: 1px solid #ddd;
         border-radius: 3px;
       }
-      .text{
+      .text {
         display: block;
-        font-size:14px;
+        font-size: 14px;
         margin-bottom: 0.5rem;
       }
-      .subtext{
+      .subtext {
         display: block;
-        font-size:12px;
+        font-size: 12px;
         color: #5e5e5e;
       }
     }
-    .mat-dialog-actions{
+    .mat-dialog-actions {
       justify-content: center;
       margin-top: 30px;
       margin-bottom: -20px;
-      button{
+      button {
         // width: 100px;
         height: 40px;
-  
-        &.cancel{
-          border:1px solid $color-gry04;
-          color:$color-gry04;
-          font-size:15px;
+
+        &.cancel {
+          border: 1px solid $color-gry04;
+          color: $color-gry04;
+          font-size: 15px;
         }
-  
-        &.ok{
+
+        &.ok {
           background-color: $color-gld01;
-          color:#fff;
+          color: #fff;
           font-size: 20px;
         }
 
-        &.abscancel{
-          all:unset;
+        &.abscancel {
+          all: unset;
           position: absolute;
           width: 23px;
           top: 7px;
           right: 7px;
-          &::before{
+          &::before {
             content: url("../../../assets/img/btn_delete.svg");
           }
         }
