--- a/src/app/pages/myplan/myplan.component.html
+++ b/src/app/pages/myplan/myplan.component.html
@@ -712,6 +712,8 @@
         </mat-slide-toggle>
       </div>
     </div>
+
+    <div #divA8 class="banner"></div>
   </div>
 
   <div class="alert" *ngIf="isWarningCar">
