--- a/src/app/pages/plan-detail/plan-detail.component.html
+++ b/src/app/pages/plan-detail/plan-detail.component.html
@@ -420,7 +420,7 @@
       </div>
     </div>
 
-    <!-- A8テスト -->
+    <!-- A8 place -->
     <div #divA8 class="banner"></div>
 
     <!-- 投稿者のプロフィール-->
