--- a/src/app/pages/spot-detail/spot-detail.component.html
+++ b/src/app/pages/spot-detail/spot-detail.component.html
@@ -344,10 +344,8 @@
       </mat-card-content>
     </mat-card>
 
-    <!-- A8テスト -->
-    <mat-card id="A8">
-      <div id="script"></div>
-    </mat-card>
+    <!-- A8 place -->
+    <div #divA8 class="banner"></div>
 
     <mat-card id="writer" *ngIf="$userStaff">
       <mat-card-header>
